NHibernate auf JetDriver umgestellt, BindingSourceInterceptor geschrieben zur Analyse der BindingSource.

--- a/trunk/src/Siesaso.Test.Gui/App.config
+++ b/trunk/src/Siesaso.Test.Gui/App.config
@@ -22,7 +22,9 @@
 
         <session-factory>
             
-            <property name="hibernate.dialect">NHibernate.Dialect.GenericDialect</property>
+            <property name="hibernate.show_sql">False</property>
+
+            <property name="hibernate.dialect">NHibernate.JetDriver.JetDialect, NHibernate.JetDriver</property>
 
             <property name="hibernate.connection.provider">NHibernate.Connection.DriverConnectionProvider</property>
 
@@ -85,7 +87,7 @@
         </root>
 
         <logger name="NHibernate">
-            <level value="FATAL" />
+            <level value="DEBUG" />
         </logger>
 
     </log4net>
