--- a/trunk/src/Siesaso.Hibernate/Siesaso.Hibernate.csproj
+++ b/trunk/src/Siesaso.Hibernate/Siesaso.Hibernate.csproj
@@ -48,12 +48,22 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\libs\NHibernate.dll</HintPath>
     </Reference>
+    <Reference Include="NHibernate.JetDriver, Version=1.2.0.2001, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\libs\NHibernate.JetDriver.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BindingSourceInterceptor.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="BindingSourceInterceptor.Designer.cs">
+      <DependentUpon>BindingSourceInterceptor.cs</DependentUpon>
+    </Compile>
     <Compile Include="Entity.cs" />
     <Compile Include="EntityBindingSource.cs">
       <SubType>Component</SubType>
