--- a/trunk/src/Siesaso.Test.Gui/App.config
+++ b/trunk/src/Siesaso.Test.Gui/App.config
@@ -87,7 +87,7 @@
         </root>
 
         <logger name="NHibernate">
-            <level value="DEBUG" />
+            <level value="ERROR" />
         </logger>
 
     </log4net>
