--- a/trunk/src/Siesaso.Forms/Siesaso.Forms.csproj
+++ b/trunk/src/Siesaso.Forms/Siesaso.Forms.csproj
@@ -41,7 +41,33 @@
     <Compile Include="EntityEditTabPage.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="GürtelList.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="GürtelList.Designer.cs">
+      <DependentUpon>GürtelList.cs</DependentUpon>
+    </Compile>
+    <Compile Include="IEntityEditControl.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="GürtelList.resx">
+      <DependentUpon>GürtelList.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Dotnetuc.NHibernate\Dotnetuc.NHibernate.csproj">
+      <Project>{31704FEC-6582-4C99-B2A3-8CF53F8B8E97}</Project>
+      <Name>Dotnetuc.NHibernate</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Siesaso.Hibernate\Siesaso.Hibernate.csproj">
+      <Project>{7FDB559B-02FB-4D65-A9AB-EFE25E39F6A8}</Project>
+      <Name>Siesaso.Hibernate</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Properties\DataSources\Siesaso.Hibernate.Gürtel.datasource" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
