--- a/trunk/src/Siesaso.Controls/Siesaso.Controls.csproj
+++ b/trunk/src/Siesaso.Controls/Siesaso.Controls.csproj
@@ -4,11 +4,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.50727</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{31704FEC-6582-4C99-B2A3-8CF53F8B8E97}</ProjectGuid>
+    <ProjectGuid>{92D8F05A-09F7-4897-82E3-9CE2A9D39C0F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Dotnetuc.NHibernate</RootNamespace>
-    <AssemblyName>Dotnetuc.NHibernate</AssemblyName>
+    <RootNamespace>Siesaso.Controls</RootNamespace>
+    <AssemblyName>Siesaso.Controls</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -28,10 +28,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="log4net, Version=1.2.9.0, Culture=neutral, PublicKeyToken=b32731d11ce58905">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\libs\log4net.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -39,29 +35,53 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BindingSourceInterceptor.cs">
-      <SubType>Component</SubType>
+    <Compile Include="GürtelList.cs">
+      <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="BindingSourceInterceptor.Designer.cs">
-      <DependentUpon>BindingSourceInterceptor.cs</DependentUpon>
+    <Compile Include="GürtelList.Designer.cs">
+      <DependentUpon>GürtelList.cs</DependentUpon>
     </Compile>
-    <Compile Include="EntityPersister.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="EntityPersister.Designer.cs">
-      <DependentUpon>EntityPersister.cs</DependentUpon>
-    </Compile>
-    <Compile Include="IEntity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VereinList.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="VereinList.Designer.cs">
+      <DependentUpon>VereinList.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Icons\BindingSourceInterceptor.bmp" />
+    <EmbeddedResource Include="GürtelList.resx">
+      <DependentUpon>GürtelList.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Icons\EntityPersister.bmp" />
+    <ProjectReference Include="..\Dotnetuc.NHibernate\Dotnetuc.NHibernate.csproj">
+      <Project>{31704FEC-6582-4C99-B2A3-8CF53F8B8E97}</Project>
+      <Name>Dotnetuc.NHibernate</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Siesaso.Forms\Siesaso.Forms.csproj">
+      <Project>{D3B58FD4-9608-4904-8F9C-DB5CEB056EA7}</Project>
+      <Name>Siesaso.Forms</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Siesaso.Hibernate\Siesaso.Hibernate.csproj">
+      <Project>{7FDB559B-02FB-4D65-A9AB-EFE25E39F6A8}</Project>
+      <Name>Siesaso.Hibernate</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Overview.cd" />
+    <EmbeddedResource Include="Icons\Gürtel.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Icons\Verein.bmp" />
+    <EmbeddedResource Include="VereinList.resx">
+      <SubType>Designer</SubType>
+      <DependentUpon>VereinList.cs</DependentUpon>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Properties\DataSources\Siesaso.Hibernate.Gürtel.datasource" />
+    <None Include="Properties\DataSources\Siesaso.Hibernate.Verein.datasource" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
