--- a/trunk/src/Siesaso.Test.Gui/App.config
+++ b/trunk/src/Siesaso.Test.Gui/App.config
@@ -22,7 +22,7 @@
 
         <session-factory>
             
-            <property name="hibernate.show_sql">False</property>
+            <property name="hibernate.show_sql">True</property>
 
             <property name="hibernate.dialect">NHibernate.JetDriver.JetDialect, NHibernate.JetDriver</property>
 
@@ -87,7 +87,7 @@
         </root>
 
         <logger name="NHibernate">
-            <level value="ERROR" />
+            <level value="INFO" />
         </logger>
 
     </log4net>
