--- a/trunk/src/Siesaso.Controls/Siesaso.Controls.csproj
+++ b/trunk/src/Siesaso.Controls/Siesaso.Controls.csproj
@@ -35,6 +35,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="JudokaList.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="JudokaList.Designer.cs">
+      <DependentUpon>JudokaList.cs</DependentUpon>
+    </Compile>
     <Compile Include="GeschlechtList.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -90,11 +96,18 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Properties\DataSources\Siesaso.Hibernate.Gürtel.datasource" />
-    <None Include="Properties\DataSources\Siesaso.Hibernate.Verein.datasource" />
+    <EmbeddedResource Include="Icons\Geschlecht.bmp" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Icons\Geschlecht.bmp" />
+    <EmbeddedResource Include="JudokaList.resx">
+      <DependentUpon>JudokaList.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Icons\Judoka.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Properties\DataSources\Softwarekueche.Siesaso.Hibernate.Gürtel.datasource" />
+    <None Include="Properties\DataSources\Softwarekueche.Siesaso.Hibernate.Verein.datasource" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
