--- a/trunk/src/Siesaso.Forms/Siesaso.Forms.csproj
+++ b/trunk/src/Siesaso.Forms/Siesaso.Forms.csproj
@@ -18,6 +18,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Debug\Siesaso.Forms.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -43,11 +44,25 @@
     </Compile>
     <Compile Include="IEntityEditControl.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="EntityEditTabControl.resx">
       <SubType>Designer</SubType>
       <DependentUpon>EntityEditTabControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="EntityEditTabPage.resx">
+      <SubType>Designer</SubType>
+      <DependentUpon>EntityEditTabPage.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <SubType>Designer</SubType>
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
@@ -62,6 +77,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Properties\DataSources\Siesaso.Hibernate.Gürtel.datasource" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Resources\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
