--- a/trunk/src/Siesaso.Hibernate/Siesaso.Hibernate.csproj
+++ b/trunk/src/Siesaso.Hibernate/Siesaso.Hibernate.csproj
@@ -59,6 +59,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Trainer.cs" />
     <Compile Include="Kämpfer.cs" />
     <Compile Include="Turnier.cs" />
     <Compile Include="Klasse.cs" />
@@ -105,6 +106,9 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Mapping\Turnier.hbm.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Mapping\Trainer.hbm.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
