--- a/trunk/src/Siesaso.Test.Gui/Siesaso.Test.Gui.csproj
+++ b/trunk/src/Siesaso.Test.Gui/Siesaso.Test.Gui.csproj
@@ -100,6 +100,7 @@
     <None Include="Resources\Klasse.bmp" />
     <None Include="Resources\Kämpfer.bmp" />
     <None Include="Resources\Turnier.bmp" />
+    <None Include="Resources\Trainer.bmp" />
     <Content Include="SieSaSoDatenbank.mdb">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
