--- a/trunk/src/Siesaso.Test.Nunit/Siesaso.Test.Nunit.csproj
+++ b/trunk/src/Siesaso.Test.Nunit/Siesaso.Test.Nunit.csproj
@@ -5,10 +5,11 @@
     <ProductVersion>8.0.50727</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{1B16F8FB-6CBC-4F0C-81B8-FB7EC7753F3C}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Softwarekueche.Siesaso.Test.Nunit</RootNamespace>
     <AssemblyName>Siesaso.Test.Nunit</AssemblyName>
+    <StartupObject>Softwarekueche.Siesaso.Test.Nunit.Progam</StartupObject>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -28,6 +29,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="NHibernate, Version=1.2.0.2002, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\libs\NHibernate.dll</HintPath>
+    </Reference>
+    <Reference Include="NHibernate.JetDriver, Version=1.2.0.2002, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\libs\NHibernate.JetDriver.dll</HintPath>
+    </Reference>
     <Reference Include="nunit.framework, Version=2.2.0.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\libs\nunit.framework.dll</HintPath>
@@ -39,6 +48,8 @@
   <ItemGroup>
     <Compile Include="CsvPersisterTest.cs" />
     <Compile Include="EntityPersisterTest.cs" />
+    <Compile Include="NHibernateMappingTest.cs" />
+    <Compile Include="Progam.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -66,6 +77,14 @@
       <Project>{7FDB559B-02FB-4D65-A9AB-EFE25E39F6A8}</Project>
       <Name>Siesaso.Hibernate</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="SieSaSoDatenbank.mdb">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
